# realtime-alpha

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.render  NOTICE  README.md  docker-compose.yml  pyproject.toml  render.yaml  ruff.toml
.github/workflows/: ci.yml  keepwarm.yml
examples/: agent_signals.example.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts  useLive.ts
frontend/src/components/: Leaderboard.tsx  Markdown.tsx  Sparkline.tsx  SymbolCard.tsx
infra/aws/: .gitignore  README.md  athena.tf  glue.tf  outputs.tf  s3.tf  variables.tf
src/realtime_alpha/: __init__.py  cli.py  llm.py
src/realtime_alpha/bus/: __init__.py  base.py  kafka.py  memory.py
src/realtime_alpha/core/: __init__.py  types.py
src/realtime_alpha/dataflows/: config.py  market_data_validator.py
src/realtime_alpha/db/: __init__.py  schema.sql  store.py
src/realtime_alpha/deep/: __init__.py  analyst.py  cache.py  scheduler.py
src/realtime_alpha/evaluation/: __init__.py  evaluator.py  leaderboard.py  metrics.py
src/realtime_alpha/ingestion/: __init__.py  binance_ws.py  normalize.py  producer.py  rest_poll.py
src/realtime_alpha/lakehouse/: __init__.py  parquet.py  partition.py  query.py  sink.py
src/realtime_alpha/ml/: __init__.py  dataset.py  train.py
src/realtime_alpha/prediction/: __init__.py  context.py  service.py
src/realtime_alpha/processor/: __init__.py  bytewax_app.py  bytewax_flow.py  dataflow.py  features.py
src/realtime_alpha/sentiment/: __init__.py  aggregate.py  cache.py  crypto_symbols.py  poller.py
src/realtime_alpha/serving/: __init__.py  app.py  broadcaster.py  leaderboard_feed.py  ws_hub.py
src/realtime_alpha/strategies/: __init__.py  base.py  deep_analysis.py  ensemble.py  ml_model.py  momentum.py  registry.py  sentiment_llm.py
tests/: test_agent_client.py  test_bus.py  test_bytewax_flow.py  test_cli.py  test_core_types.py  test_dataflows_vendored.py  test_db_store.py  test_deep_analysis.py  test_deep_scheduler.py  test_ensemble.py  test_evaluator.py  test_features.py  test_ingestion.py  test_lakehouse_query.py  test_lakehouse_sink.py  test_leaderboard.py  test_leaderboard_feed.py  test_llm.py  test_metrics.py  test_ml_dataset.py  test_ml_model.py  test_ml_train.py  test_parquet.py  test_partition.py  test_pipeline.py  test_predictor.py  test_processor.py  test_sentiment_llm.py  test_sentiment_poller.py  test_serving.py  test_strategies.py  test_wiring.py
